deploy/gatekeeper/constraints/block-dangerous-hostpath.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHostFilesystem
metadata:
  name: block-dangerous-hostpath
  labels:
    app.kubernetes.io/name: cloudnative-threatguard
    app.kubernetes.io/component: admission-control
    security.threatguard.io/tier: prevention
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - tetragon
      - kube-public
      - kube-node-lease
  parameters:
    prohibitedPaths:
      - "/"
      - "/var/run/docker.sock"
      - "/run/containerd/containerd.sock"
      - "/var/run/crio/crio.sock"
      - "/etc"
      - "/etc/shadow"
      - "/etc/kubernetes"
      - "/root"
      - "/proc"
      - "/sys"
